--- a/2025-07-09.html
+++ b/2025-07-09.html
@@ -28,12 +28,12 @@ body{
 }
 
 .days {
-  background: #EF2F3C;
+  background: #276FBF;
 }
 
 .hours {
   background: #eeeeee;
-  color: #183059;
+  color: #276FBF;
 }
 
 .minutes {
@@ -41,7 +41,7 @@ body{
 }
 
 .seconds {
-  background: #F0A202;
+  background: #276FBF;
 }
 
 .numbers {
